<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollFeed"
    android:background="@drawable/centre_background"
    android:focusableInTouchMode="true">

    <android.support.v7.widget.CardView
        android:id="@+id/personalDetailsCard"
        style="@style/centreLocatorCardDesign"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="10dp">
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:focusableInTouchMode="false"
                android:orientation="vertical"
                android:padding="20dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtInputdlno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Driving License No."
                        android:textColor="#ff0000"/>

                    <TextView
                        android:id="@+id/dlno"
                        style="@style/modifiedEditText"
                        android:hint="@string/dlno"
                        android:singleLine="true"
                        android:layout_marginStart="150dp"
                        android:layout_marginBottom="-25dp"/>

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtInputdlname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Driving License Name"
                        android:textColor="#dfc82f"/>

                    <EditText
                        android:id="@+id/dlname"
                        style="@style/modifiedEditText"
                        android:ems="10"
                        android:hint="@string/dlname"
                        android:inputType="text"
                        android:layout_marginStart="150dp"
                        android:layout_marginBottom="-25dp"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtInputrelative"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/relative"
                        android:textColor="#dfc82f"/>

                    <EditText
                        android:id="@+id/relative"
                        style="@style/modifiedEditText"
                        android:hint="Relation"
                        android:inputType="text"
                        android:layout_marginStart="150dp"
                        android:layout_marginBottom="-25dp"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtInputregd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Issue Date"
                        android:textColor="#dfc82f"/>

                    <TextView
                        android:id="@+id/regd"
                        style="@style/modifiedEditText"
                        android:hint="@string/regd"
                        android:layout_marginStart="150dp"
                        android:layout_marginBottom="-25dp"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtInputdlval"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="License Validity"
                        android:textColor="#dfc82f"/>

                    <EditText
                        android:id="@+id/dlval"
                        style="@style/modifiedEditText"
                        android:hint="@string/dlval"
                        android:layout_marginStart="150dp"
                        android:layout_marginBottom="-25dp"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtInputdob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Date Of Birth"
                        android:textColor="#dfc82f"/>

                    <EditText
                        android:id="@+id/dldob"
                        style="@style/modifiedEditText"
                        android:hint="@string/dob"
                        android:layout_marginStart="150dp"
                        android:layout_marginBottom="-25dp"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtInputbloodgrp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Blood Group"
                        android:textColor="#dfc82f"/>

                    <EditText
                        android:id="@+id/bgrp"
                        style="@style/modifiedEditText"
                        android:hint="@string/bgrp"
                        android:layout_marginStart="150dp"
                        android:layout_marginBottom="-25dp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtInputvtype"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Vehicle Class"
                        android:textColor="#dfc82f"/>

                    <EditText
                        android:id="@+id/dlvtype"
                        style="@style/modifiedEditText"
                        android:hint="@string/vtype"
                        android:layout_marginStart="150dp"
                        android:layout_marginBottom="-25dp"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtInputlautc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Authority Code"
                        android:textColor="#ff0000"/>

                    <TextView
                        android:id="@+id/dlautc"
                        style="@style/modifiedEditText"
                        android:hint="@string/lauthc"
                        android:layout_marginStart="150dp"
                        android:layout_marginBottom="-25dp"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtInputlaut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="License Authority RTO"
                        android:textColor="#ff0000"/>

                    <TextView
                        android:id="@+id/dlaut"
                        style="@style/modifiedEditText"
                        android:hint="@string/lauth"
                        android:layout_marginStart="150dp"
                        android:layout_marginBottom="-25dp" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnback"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/centre_button"
                    android:text="@string/back"
                    android:textColor="@color/whiteTextColor" />
                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="-50dp"
                    android:background="@drawable/centre_button"
                    android:text="@string/updateButtonText"
                    android:textColor="@color/whiteTextColor" />

            </LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>
</android.support.v4.widget.NestedScrollView>
